test/datalog_tests/dupfield.fail.ast.expected
error: ./test/datalog_tests/dupfield.fail.dl:2:22-2:31: Multiple definitions of argument f at the following locations:
  ./test/datalog_tests/dupfield.fail.dl:2:22-2:31
  ./test/datalog_tests/dupfield.fail.dl:2:33-2:43

Failed to parse input file: "./test/datalog_tests/dupfield.fail.dl" (line 6, column 1):
unexpected end of input
expecting "="
