test/datalog_tests/dupfield.fail.dl
// two fields with the same name
type t = Constr { f: bigint, f: bigint }

//---

// Two symbols with the same name
typedef f = bigint
function f(): bigint
